html and partial css upload

--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/style.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
     <title>Weather Dashboard</title>
 </head>
+
 <body>
-    
+    <header id="header">
+        <h1>Weather Dashboard</h1>
+    </header>
+    <main>
+        <aside id="searchBox">
+            <br class="search">
+            <h2>Enter your city:</h2>
+            <input type="text" placeholder="enter your city here" id="cityBox"></br>
+            <div id="box">
+                <button class="button" class="btn btn-success" id="searchButton">Search</button>
+            </div>
+            </div>
+            <div class="search1" id="oldSearch"></div>
+
+        </aside>
+
+
+
+
+
+
+
+    </main>
+
 </body>
+
+
 </html>
