html, css, js updates

--- a/index.html
+++ b/index.html
@@ -28,14 +28,85 @@
 
         </aside>
 
+        <section id="weatherData">
 
+            <div id="currentWeather">
+                <div id="currentWeatherData">
+                    <h2><span id="chosenCity"></span></h2>
+                    <img id="currentIcon">
+                    <h4>Temperature: <span id="currentTemp"></span> *F</h4>
+                    <h4>Wind: <span id="currentWind"></span> MPH</h4>
+                    <h4>Humidity: <span id="currentHumidity"></span> %</h4>
+                </div>
+            </div>
+            <div class="btn-group">
+                <button class="button">Button</button>
+                <button class="button">Button</button>
+                <button class="button">Button</button>
+                <button class="button">Button</button>
+              </div>
+              
+            <div id="forecast">
+
+                <h2>5-day Forecast: </h2>
+
+                <div id="weatherForecastCards">
+
+                    <div class="forecastCard" id="first">
+                        <h3><span id="date1"></span></h3>
+                        <img id="icon1">
+                        <h4>Temp: <span id="temp1"></span></h4>
+                        <h4>Wind: <span id="wind1"></span></h4>
+                        <h4>Humidity: <span id="humidity1">%</span></h4>
+
+                    </div>
+
+                    <div class="forecastCard" id="second">
+                        <h3><span id="date2"></span></h3>
+                        <img id="icon2">
+                        <h4>Temp: <span id="temp2"></span></h4>
+                        <h4>Wind: <span id="wind2"></span></h4>
+                        <h4>Humidity: <span id="humidity2">%</span></h4>
+                    </div>
+
+                    <div class="forecastCard" id="third">
+                        <h3><span id="date3"></span></h3>
+                        <img id="icon3">
+                        <h4>Temp: <span id="temp3"></span></h4>
+                        <h4>Wind: <span id="wind3"></span></h4>
+                        <h4>Humidity: <span id="humidity3">%</span></h4>
+                    </div>
+
+                    <div class="forecastCard" id="fourth">
+                        <h3><span id="date4"></span></h3>
+                        <img id="icon4">
+                        <h4>Temp: <span id="temp4"></span></h4>
+                        <h4>Wind: <span id="wind4"></span></h4>
+                        <h4>Humidity: <span id="humidity4">%</span></h4>
+                    </div>
+
+                    <div class="forecastCard" id="fifth">
+                        <h3><span id="date5"></span></h3>
+                        <img id="icon5">
+                        <h4>Temp: <span id="temp5"></span></h4>
+                        <h4>Wind: <span id="wind5"></span></h4>
+                        <h4>Humidity: <span id="humidity5">%</span></h4>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
+    </main>
 
 
 
 
 
     </main>
-
+    <script src="./Assets/js/script.js"></script>
 </body>
 
 
