--- a/index.html
+++ b/index.html
@@ -19,20 +19,13 @@
         <h1>Weather Dashboard</h1>
     </header>
     <main>
-        <form id="form">
-            <input type="text" autofocus id="input"/>
-            <p id="feedback"></p>
-        </form>
-        <aside id="searchBox">
-            <br class="search">
-            <h2>Enter your city:</h2>
-            <input type="text" placeholder="Enter your city here" id="cityBox"></br>
+        <aside form id="form">
+            <input type="text" placeholder="Enter your city here" autofocus id="input" />
+            <p id="feedback">
             <div id="box">
                 <button class="button" class="btn btn-success" id="searchButton">Search</button>
             </div>
-            </div>
-            <div class="search1" id="oldSearch"></div>
-
+            </p>
         </aside>
 
         <section id="weatherData">
@@ -53,45 +46,45 @@
 
                 <div id="weatherForecastCards">
 
-                    <div class="card" id="1">
+                    <div class="card">
                         <h3><span id="date1"></span></h3>
                         <img id="icon1">
-                        <h4>Temp: <span id="temp"></span></h4>
-                        <h4>Wind: <span id="wind1"></span></h4>
-                        <h4>Humidity: <span id="humidity1"></span>%</h4>
+                        <h4>Temp: <span id="TBD"></span></h4>
+                        <h4>Wind: <span id="TBD1"></span></h4>
+                        <h4>Humidity: <span id="TBD2"></span>%</h4>
 
                     </div>
 
-                    <div class="card" id="2">
+                    <div class="card">
                         <h3><span id="date2"></span></h3>
                         <img id="icon2">
-                        <h4>Temp: <span id="temp2"></span></h4>
-                        <h4>Wind: <span id="wind2"></span></h4>
-                        <h4>Humidity: <span id="humidity2">%</span></h4>
+                        <h4>Temp: <span id="TBD"></span></h4>
+                        <h4>Wind: <span id="TBD1"></span></h4>
+                        <h4>Humidity: <span id="TBD2"></span>%</h4>
                     </div>
 
-                    <div class="card" id="3">
+                    <div class="card">
                         <h3><span id="date3"></span></h3>
                         <img id="icon3">
-                        <h4>Temp: <span id="temp3"></span></h4>
-                        <h4>Wind: <span id="wind3"></span></h4>
-                        <h4>Humidity: <span id="humidity3">%</span></h4>
+                        <h4>Temp: <span id="TBD"></span></h4>
+                        <h4>Wind: <span id="TBD1"></span></h4>
+                        <h4>Humidity: <span id="TBD2"></span>%</h4>
                     </div>
 
-                    <div class="card" id="4">
+                    <div class="card">
                         <h3><span id="date4"></span></h3>
                         <img id="icon4">
-                        <h4>Temp: <span id="temp4"></span></h4>
-                        <h4>Wind: <span id="wind4"></span></h4>
-                        <h4>Humidity: <span id="humidity4">%</span></h4>
+                        <h4>Temp: <span id="TBD"></span></h4>
+                        <h4>Wind: <span id="TBD1"></span></h4>
+                        <h4>Humidity: <span id="TBD2"></span>%</h4>
                     </div>
 
-                    <div class="card" id="5">
+                    <div class="card">
                         <h3><span id="date5"></span></h3>
                         <img id="icon5">
-                        <h4>Temp: <span id="temp5"></span></h4>
-                        <h4>Wind: <span id="wind5"></span></h4>
-                        <h4>Humidity: <span id="humidity5">%</span></h4>
+                        <h4>Temp: <span id="TBD"></span></h4>
+                        <h4>Wind: <span id="TBD1"></span></h4>
+                        <h4>Humidity: <span id="TBD2"></span>%</h4>
                     </div>
 
                 </div>
@@ -102,12 +95,6 @@
 
     </main>
 
-
-
-
-
-
-    </main>
     <script src="./assets/script.js"></script>
 </body>
 
